# etudes-test

./: CMakeLists.txt
src/: main.cpp
src/Utility/: Utility.cpp
